--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -812,6 +812,34 @@ spec:
 # Doors #
 #########
 
+"$[[ inputs.os ]]-$[[ inputs.platform ]] [dgnlance]":
+  extends:
+    - .$[[ inputs.os ]]-build
+  script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
+    - cd src/doors/dgnlance
+    - touch depend
+    - touch xpdev
+    - touch odoors
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
+  variables:
+    GIT_STRATEGY: fetch
+  artifacts:
+    name: "dgnlance-$[[ inputs.os ]]-$[[ inputs.platform ]]"
+    paths:
+      - "src/doors/dgnlance/data"
+      - "src/doors/dgnlance/dgnlnce*"
+      - "src/doors/dgnlance/lib.*"
+      - "src/doors/dgnlance/text"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
+
 #########
 # Tests #
 #########
