Don't build OpenDoors when build_doors="no"
We don't need to slow down the Raspberry Pi and old MacOS any for
these.

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -730,6 +730,10 @@ spec:
     GIT_STRATEGY: fetch
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
 
 "$[[ inputs.os ]]-$[[ inputs.platform ]] [sftp]":
   extends:
