--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -843,6 +843,34 @@ spec:
       when: never
     - !reference [.rules, rules]
 
+"$[[ inputs.os ]]-$[[ inputs.platform ]] [freevote]":
+  extends:
+    - .$[[ inputs.os ]]-build
+  script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
+    - cd src/doors/freevote/src
+    - touch depend
+    - touch xpdev
+    - touch odoors
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
+  variables:
+    GIT_STRATEGY: fetch
+  artifacts:
+    name: "freevote-$[[ inputs.os ]]-$[[ inputs.platform ]]"
+    paths:
+      - "src/doors/freevote/*.doc"
+      - "src/doors/freevote/freevote*"
+      - "src/doors/freevote/*.cfg"
+      - "src/doors/freevote/reset"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
+
 #########
 # Tests #
 #########
