Freevote needs ciolib, but doesn't need hash or encode libs

--- a/src/doors/freevote/src/GNUmakefile
+++ b/src/doors/freevote/src/GNUmakefile
@@ -23,9 +23,9 @@ FREEVOTE :=	$(EXEODIR)$(DIRSEP)freevote$(EXEFILE)
 FREEVOTE_DST :=	..$(DIRSEP)freevote.$(machine)$(EXEFILE)
 ODOORS_LIB :=	$(SRC_ROOT)$(DIRSEP)odoors$(DIRSEP)libs-${OS}$(DIRSEP)$(LIBPREFIX)ODoors$(LIBFILE)
 
-LDFLAGS	+=	-L$(SRC_ROOT)/odoors/libs-$(OS) $(CIOLIB-MT_LDFLAGS) $(XPDEV-MT_LDFLAGS) $(MT_LDFLAGS) $(ENCODE_LDFLAGS) $(HASH_LDFLAGS)
+LDFLAGS	+=	-L$(SRC_ROOT)/odoors/libs-$(OS) $(CIOLIB-MT_LDFLAGS) $(XPDEV-MT_LDFLAGS) $(MT_LDFLAGS)
 CFLAGS	+=	-DOD_WIN32_STATIC -I$(SRC_ROOT)/odoors -Wall -pedantic $(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS)
-LIBS	+=	 $(ODOORS_LIB) $(CIOLIB-MT_LIBS) $(ENCODE_LIBS) $(HASH_LIBS) $(XPDEV-MT_LIBS)
+LIBS	+=	 $(ODOORS_LIB) $(CIOLIB-MT_LIBS) $(XPDEV-MT_LIBS)
 ifdef win
  LIBS	+=	-lcomctl32
 endif
