--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -847,11 +847,13 @@ spec:
   extends:
     - .$[[ inputs.os ]]-build
   script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ciolib.tgz"
     - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
     - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
     - cd src/doors/freevote/src
+    - touch ciolib-mt
     - touch depend
-    - touch xpdev
+    - touch xpdev-mt
     - touch odoors
     - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
   variables:
@@ -864,6 +866,7 @@ spec:
       - "src/doors/freevote/*.cfg"
       - "src/doors/freevote/reset"
   needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [ciolib]"
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
   rules:
