--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -874,6 +874,43 @@ spec:
       when: never
     - !reference [.rules, rules]
 
+"$[[ inputs.os ]]-$[[ inputs.platform ]] [gac_bj]":
+  extends:
+    - .$[[ inputs.os ]]-build
+  script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/ciolib.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
+    - cd src/doors/gac/gac_bj/src
+    - touch ciolib-mt
+    - touch depend
+    - touch xpdev-mt
+    - touch odoors
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
+  variables:
+    GIT_STRATEGY: fetch
+  artifacts:
+    name: "gac_bj-$[[ inputs.os ]]-$[[ inputs.platform ]]"
+    paths:
+      - "src/doors/gac/gac_bj/*.ans"
+      - "src/doors/gac/gac_bj/*.art"
+      - "src/doors/gac/gac_bj/*.asc"
+      - "src/doors/gac/gac_bj/*.bat"
+      - "src/doors/gac/gac_bj/*.cfg"
+      - "src/doors/gac/gac_bj/*.diz"
+      - "src/doors/gac/gac_bj/*.doc"
+      - "src/doors/gac/gac_bj/*.sh"
+      - "src/doors/gac/gac_bj/encrypt"
+      - "src/doors/gac/gac_bj/gac_bj"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [ciolib]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
+
 #########
 # Tests #
 #########
