Add pack/unpack utility for .art files

--- a/src/doors/gac/gamesdk/GNUmakefile
+++ b/src/doors/gac/gamesdk/GNUmakefile
@@ -1,8 +1,11 @@
 SRC_ROOT	:=	../../..
 include ${SRC_ROOT}/build/Common.gmake
+include Common.gmake
 
 CFLAGS	+=	$(XPDEV_CFLAGS)
 LDFLAGS	+=	$(XPDEV_LDFLAGS)
+
+all: $(ENCRYPT) $(PACKART) $(UNPACKART)
 
 $(ENCRYPT): $(EXEODIR) $(OBJS) $(BUILD_DEPENDS)
 	@echo Linking $@
