--- a/src/doors/gac/gamesdk/GNUmakefile
+++ b/src/doors/gac/gamesdk/GNUmakefile
@@ -7,6 +7,9 @@ LDFLAGS	+=	$(XPDEV_LDFLAGS)
 
 all: $(ENCRYPT) $(PACKART) $(UNPACKART)
 
+.PHONY: packart
+packart: $(PACKART)
+
 $(ENCRYPT): $(EXEODIR) $(OBJS) $(BUILD_DEPENDS)
 	@echo Linking $@
 	${QUIET}$(CC) $(LDFLAGS) $(OBJS) -o $@ $(XPDEV_LIBS)
