--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -879,6 +879,7 @@ spec:
     - .$[[ inputs.os ]]-build
   script:
     - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/cryptlib.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/gamesdk.tgz"
     - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
     - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
     - cd src/doors/gac/gac_bj/src
@@ -902,6 +903,35 @@ spec:
       - "src/doors/gac/gac_bj/*.sh"
       - "src/doors/gac/gac_bj/encrypt"
       - "src/doors/gac/gac_bj/gac_bj"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [cryptlib]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [gamesdk]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
+
+"$[[ inputs.os ]]-$[[ inputs.platform ]] [gamesdk]":
+  extends:
+    - .$[[ inputs.os ]]-build
+  script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/cryptlib.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
+    - cd src/doors/gac/gamesdk
+    - touch cl
+    - touch depend
+    - touch xpdev-mt
+    - touch odoors
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
+  variables:
+    GIT_STRATEGY: fetch
+  artifacts:
+    name: "gac_bj-$[[ inputs.os ]]-$[[ inputs.platform ]]"
+    paths:
+      - "src/doors/gac/gamesdk/*.*.exe.*"
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [cryptlib]"
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
