We need to object files too to avoid rebuilds

--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -927,7 +927,7 @@ spec:
     - touch odoors
     - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
     - cd ../../../..
-    - tar -czf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/gamesdk.tgz" src/doors/gac/gamesdk/*.exe.release*
+    - tar -czf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/gamesdk.tgz" src/doors/gac/gamesdk/*.exe.release* src/doors/gac/gamesdk/*.obj.release*
   variables:
     GIT_STRATEGY: fetch
   artifacts:
