--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -893,16 +893,47 @@ spec:
   artifacts:
     name: "gac_bj-$[[ inputs.os ]]-$[[ inputs.platform ]]"
     paths:
-      - "src/doors/gac/gac_bj/*.ans"
       - "src/doors/gac/gac_bj/*.art"
-      - "src/doors/gac/gac_bj/*.asc"
       - "src/doors/gac/gac_bj/*.bat"
-      - "src/doors/gac/gac_bj/*.cfg"
       - "src/doors/gac/gac_bj/*.diz"
       - "src/doors/gac/gac_bj/*.doc"
       - "src/doors/gac/gac_bj/*.sh"
-      - "src/doors/gac/gac_bj/encrypt"
       - "src/doors/gac/gac_bj/gac_bj"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [cryptlib]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [gamesdk]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
+
+"$[[ inputs.os ]]-$[[ inputs.platform ]] [gac_fc]":
+  extends:
+    - .$[[ inputs.os ]]-build
+  script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/cryptlib.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/gamesdk.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
+    - cd src/doors/gac/gac_fc/src
+    - touch cl
+    - touch depend
+    - touch xpdev-mt
+    - touch odoors
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
+  variables:
+    GIT_STRATEGY: fetch
+  artifacts:
+    name: "gac_fc-$[[ inputs.os ]]-$[[ inputs.platform ]]"
+    paths:
+      - "src/doors/gac/gac_fc/*.art"
+      - "src/doors/gac/gac_fc/*.bat"
+      - "src/doors/gac/gac_fc/*.diz"
+      - "src/doors/gac/gac_fc/*.doc"
+      - "src/doors/gac/gac_fc/*.sh"
+      - "src/doors/gac/gac_fc/gac_fc"
   needs:
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [cryptlib]"
     - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [gamesdk]"
