--- a/.gitlab-ci-unix.yml
+++ b/.gitlab-ci-unix.yml
@@ -946,6 +946,42 @@ spec:
       when: never
     - !reference [.rules, rules]
 
+"$[[ inputs.os ]]-$[[ inputs.platform ]] [gac_wh]":
+  extends:
+    - .$[[ inputs.os ]]-build
+  script:
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/cryptlib.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/gamesdk.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/odoors.tgz"
+    - tar -xvzf "/tmp/gitlab-runner/$[[ inputs.os ]]-$[[ inputs.platform ]]-${CI_PIPELINE_ID}/xpdev.tgz"
+    - cd src/doors/gac/gac_wh/src
+    - touch cl
+    - touch depend
+    - touch xpdev-mt
+    - touch odoors
+    - $[[ inputs.gnu_make ]] $[[ inputs.build_flags ]] $BUILD_ARGS
+  variables:
+    GIT_STRATEGY: fetch
+  artifacts:
+    name: "gac_wh-$[[ inputs.os ]]-$[[ inputs.platform ]]"
+    paths:
+      - "src/doors/gac/gac_wh/*.art"
+      - "src/doors/gac/gac_wh/*.bat"
+      - "src/doors/gac/gac_wh/*.diz"
+      - "src/doors/gac/gac_wh/*.doc"
+      - "src/doors/gac/gac_wh/*.sh"
+      - "src/doors/gac/gac_wh/gac_wh"
+      - "src/doors/gac/gac_wh/gac_wh.*"
+  needs:
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [cryptlib]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [gamesdk]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [odoors]"
+    - job: "$[[ inputs.os ]]-$[[ inputs.platform ]] [xpdev]"
+  rules:
+    - if: '"$[[ inputs.build_doors ]]" == "no"'
+      when: never
+    - !reference [.rules, rules]
+
 "$[[ inputs.os ]]-$[[ inputs.platform ]] [gamesdk]":
   extends:
     - .$[[ inputs.os ]]-build
