Fix macOS builds
- Nobody needs malloc.h. Nobody. Never.
- Rename getdate() to clans_getdate()

--- a/src/doors/clans-src/src/makefile
+++ b/src/doors/clans-src/src/makefile
@@ -34,6 +34,9 @@ os	:=	$(shell echo $(OS)| tr "[A-Z ]" "[a-z_]")
 ifeq ($(os),netbsd)
 CFLAGS	+=	-D__unix__
 endif
+ifeq ($(os),darwin)
+CFLAGS	+=	-D__unix__
+endif
 # Somebody make this compile under gcc. :-)  I'll get you started:
 CC ?= gcc
 ODOORS ?= ../../../odoors
