Suppress the data target when building Windows
Not exactly ideal, but it's fine.

--- a/src/doors/clans-src/src/makefile
+++ b/src/doors/clans-src/src/makefile
@@ -95,7 +95,9 @@ devkit: chew$(EXEFILE) ecomp$(EXEFILE) install$(EXEFILE) \
 	mspells$(EXEFILE)
 
 .PHONY: data
+ifndef WIN
 data: $(DATA_DIR)/clans.pak
+endif
 
 clean:
 	$(DELETE) *.o
